Fixed delete command #63